Revert "Update blueprints"
This reverts commit fb1d88d8bc957f7156abf5ac7dd39f562dc04739.

--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -8,6 +8,6 @@ author:
   url: http://nunopress.com
 homepage: https://github.com/nunopress/grav-plugin-simple_form
 demo: http://grav-demo.nunopress.com/
-keywords: [getsimpleform, form, contact, plugin, jquery, ajax]
+keywords: "getsimpleform, form, contact, plugin, jquery, ajax"
 bugs: https://github.com/nunopress/grav-plugin-simple_form/issues
 license: MIT
