--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,5 +1,5 @@
 name: Simple Form
-version: 1.0.0
+version: 1.1.0
 description: "This plugin add simple form working with webservice [Simple Form](http://getsimpleform.com) and sending email from your **Grav site**."
 icon: envelope-o
 author:
@@ -8,6 +8,6 @@ author:
   url: http://nunopress.com
 homepage: https://github.com/nunopress/grav-plugin-simple_form
 demo: http://grav-demo.nunopress.com/
-keywords: [getsimpleform, form, contact, plugin, jquery, ajax]
+keywords: "getsimpleform, form, contact, plugin, jquery, ajax"
 bugs: https://github.com/nunopress/grav-plugin-simple_form/issues
 license: MIT
