--- a/simple_form.yaml
+++ b/simple_form.yaml
@@ -1,39 +1,38 @@
-enabled: true
+enabled: false
 
 token: ""
-short_code: "simple_form"
 template_file: "simple_form"
 
 fields:
-    name:
-        type: "text"
-        title: "Name"
-        default: ""
-        placeholder: "Add your name"
-        class: ""
-        required: true
+  name:
+    type: "text"
+    title: "Name"
+    default: ""
+    placeholder: "Add your name"
+    class: ""
+    required: true
 
-    email:
-        type: "email"
-        title: "Email"
-        default: ""
-        placeholder: "Add your email"
-        class: ""
-        required: true
+  email:
+    type: "email"
+    title: "Email"
+    default: ""
+    placeholder: "Add your email"
+    class: ""
+    required: true
 
-    message:
-        type: "textarea"
-        title: "Message"
-        default: ""
-        placeholder: "Add your message"
-        class: ""
-        required: true
+  message:
+    type: "textarea"
+    title: "Message"
+    default: ""
+    placeholder: "Add your message"
+    class: ""
+    required: true
 
-    submit:
-        type: "submit"
-        title: "Submit"
-        default: ""
-        class: ""
+  submit:
+    type: "submit"
+    title: "Submit"
+    default: ""
+    class: ""
 
 messages:
-    success: "Your message has been sent."
+  success: "Your message has been sent."
