--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,5 +1,5 @@
 name: Simple Form
-version: 1.2.2
+version: 1.2.3
 description: "This plugin add simple form working with webservice [Simple Form](http://getsimpleform.com) and sending email from your **Grav site**."
 icon: envelope-o
 author:
@@ -7,9 +7,10 @@ author:
   email: hello@nunopress.com
   url: http://nunopress.com
 homepage: https://github.com/nunopress/grav-plugin-simple_form
-demo: http://grav-demo.nunopress.com/
+#demo: http://grav-demo.nunopress.com/
 keywords: "getsimpleform, form, contact, plugin, jquery, ajax"
 bugs: https://github.com/nunopress/grav-plugin-simple_form/issues
+docs: https://github.com/nunopress/grav-plugin-simple_form/README.md
 license: MIT
 
 form:
